--- a/tex/sections/1-introduction.tex
+++ b/tex/sections/1-introduction.tex
@@ -1,13 +1,6 @@
-This is an Introduction with a colorbox. I like color boxes.
-\vspace{1em}
-\begin{tcolorbox}[title=Some Title!]
-  Some text!
-\end{tcolorbox}
-
-This is a figure without a graphics input.
-\begin{figure}[!h]
-  \centering
-  %\input{graphics/...}
-  \caption{This is a caption.}
-  \label{fig:test_figure}
-\end{figure}
+We want to estimate the mean shape of a set of planar curves $y_1,\dots,y_n : [0,1] \rightarrow \mathbb{C}$.
+Consider the following model for independent curves
+\begin{equation}
+  Y_i(t_{ij}) = \mu(t_{ij}, \mathbf{x}_i) + E_i(t_{ij}) + \epsilon(t_{ij}),
+    \quad j = 1,\dots,D_i, \, i = 1,\dots,n,
+\end{equation}
