Add Design Document notebook, update others

--- a/notebooks/almond_planarshape_fullproc.ipynb
+++ b/notebooks/almond_planarshape_fullproc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 240,
+       "width": 240
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -67,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +107,12 @@
        "plot without title"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "image/png": {
+       "height": 240,
+       "width": 240
+      }
+     },
      "output_type": "display_data"
     }
    ],
@@ -111,6 +121,13 @@
     "mean_d3 %>% as_shape_frame_default() %>% arrange(arg) %>%\n",
     "  ggplot(aes(real, imaginary)) + geom_path()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -125,7 +142,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.3"
   }
  },
  "nbformat": 4,
