Add and finalize notebooks for Almond/Lisa meeting

--- a/notebooks/Elasdics.ipynb
+++ b/notebooks/Elasdics.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "library(elasdics)\n",
-    "source(\"/home/mnl/Statistik/masterthesis/code/datasets.R\")\n",
+    "source(\"/home/mnl/Statistik/masterthesis/code/datasets.R\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "set.seed(18)\n",
-    "\n",
     "data_curves <- curves.spiral(n_curves=4, rotate=FALSE, scale=FALSE, center=TRUE)\n",
     "data_curves2 <- curves.digit3(rotate=FALSE, scale=FALSE, center=TRUE)"
    ]
@@ -51,7 +58,7 @@
     "# Display plots in smaller size\n",
     "options(repr.plot.width=8, repr.plot.height=5)\n",
     "\n",
-    "grid.arrange(p1, p2, nrow=1, widths=5:4, top=\"Spirals and digits3 with random rotation and scaling\")"
+    "grid.arrange(p1, p2, nrow=1, widths=5:4, top=\"Spirals and digits3\")"
    ]
   },
   {
