full proc2d distance derivation, start proc2d eigenvalue prob

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -48,6 +48,11 @@
 \usepackage{tcolorbox}
 
 
+% Shortcuts/Definitions
+\DeclareMathOperator*{\argmin}{argmin}   % Jan Hlavacek
+\DeclareMathOperator*{\argmax}{argmax}   % Jan Hlavacek
+
+
 
 
 %% The document starts here!
@@ -57,9 +62,10 @@
 \begin{titlepage}
 
   \begin{center}
-  {\LARGE\textbf{Elastic Full Procrustes Means for Sparse and Irregular Planar Curves}}
-  \vspace{0.7cm}\\
-  {\large Master Thesis}
+    {\LARGE\textbf{Elastic Full Procrustes Means for Sparse and\vspace{0.4cm}\\
+    Irregular Planar Curves}}
+  \vspace{1cm}\\
+  {\large Masters Thesis}
   \vspace{0.7cm}\\
   \textsc{Manuel Pfeuffer\footnote{\url{pfeuferm@hu-berlin.de}, Matriculation Number: 577668}}
   \vspace{0.1cm}\\
@@ -79,7 +85,7 @@
 \newpage
 
 
-\section{Basics Write-Up}
+\section{Math-Basics Recap}
 \label{sec:intro}
 \input{sections/1-introduction}
 
